src/objects/cb5__CBPeriod__c.object
<CustomObject>
    <fields>
        <fullName>cb5__BYName__c</fullName>
        <formula>cb5__CBBudgetYear__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BY Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__CBBudgetYearSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Budget Year Set</label>
        <referenceTo>cb5__CBBudgetYear__c</referenceTo>
        <relationshipLabel>CB Periods (CB Budget Year Set)</relationshipLabel>
        <relationshipName>CBSetPeriods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBBudgetYear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Budget Year</label>
        <referenceTo>cb5__CBBudgetYear__c</referenceTo>
        <relationshipLabel>CB Periods</relationshipLabel>
        <relationshipName>CBPeriods</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__End__c</fullName>
        <label>End</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cb5__ExtId__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Start__c</fullName>
        <label>Start</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>CB Period</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <columns>cb5__ExtId__c</columns>
        <columns>NAME</columns>
        <columns>cb5__CBBudgetYear__c</columns>
        <columns>cb5__CBBudgetYearSet__c</columns>
        <columns>cb5__Start__c</columns>
        <columns>cb5__End__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>cb5__CheckPeriodStartEndDiapasonIsInsideBY</fullName>
        <active>false</active>
        <errorConditionFormula>OR(cb5__CBBudgetYear__r.cb5__End__c &lt; cb5__End__c,cb5__CBBudgetYear__r.cb5__Start__c &gt; cb5__Start__c)</errorConditionFormula>
        <errorMessage>Selected period start/end is outside of the Budget Year Period</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cb5__NameUniquenessCheck</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  CONTAINS(
      VLOOKUP( 
        $ObjectType.cb5__CBPeriod__c.Fields.Name , 
        $ObjectType.cb5__CBPeriod__c.Fields.Name, Name
      ), 
      Name
    ), 
  OR(
      ISNEW(), ISCHANGED(Name)
    ) 
  )</errorConditionFormula>
        <errorMessage>You cannot use an existing name</errorMessage>
    </validationRules>
</CustomObject>